<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="facebook_application_id" translatable="false">189183456675831</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb189183456675831</string>

    <string name="subtitle_login">Find a nice restaurant and invite your co-workers for lunch!</string>

    <string name="your_lunch">Your lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="search">Search</string>
    <string name="no_decided">hasn\'t decided yet</string>
    <string name="eating">is eating</string>

    <string name="error_not_connected">You have to be connected</string>
    <string name="error_authentication_canceled">Connexion caceled</string>
    <string name="error_no_internet">No connexion network</string>
    <string name="error_unknown_error">Unknown error </string>
    <string name="connection_succeed">Connection succeed !</string>

    <string name="fb_login">Sign in with Facebook</string>
    <string name="google_login">Sign in with Google</string>

    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>

    <string name="open_now">Open now</string>
    <string name="closed">Close</string>
    <string name="no_data">no data</string>
    <string name="select">select this restaurant</string>

    <string name="notification">Notification</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="writehere">Write your message here</string>


</resources>